--- a/index.css
+++ b/index.css
@@ -20,105 +20,88 @@
 
 
 
-header {
+/*header {
     display: inline-block;
     flex-direction: row-reverse;
-}
+}*/
 
+/*
 #container {
     width: 100%;
     border: 2px solid black;
     font-size: 24px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: rgb(173, 246, 91);
-    
-}
+}*/
 
 
 body {
     margin: 8px 16px 8px 16px;
-    /* top right bottom left*/
 }
-
-
-.flex-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 10px;
-
-}
-
-.flex-container * {
-    margin: 0px 10px;
-
-}
-
 
 #container-main {
     display: grid;
-    width: 100%;
-    height: 600px;
-    grid-template-columns: auto 25% 25%;
-    grid-template-rows: 300px 300px;
-    grid-template-areas: "container-image container-paragraphe container-paragraphe"
-                        "container-image container-short-paragraphe container-video";
-
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-template-areas: 
+        "container-image container-paragraphe container-paragraphe"
+        "container-image container-short-paragraphe container-video";
 }
 
 .container-image {
     grid-area: container-image;
-    /*grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;*/
-    margin: 10px 10px 10px 10px;
+    margin: 10px;
+    text-align: center;
+    height: 500px; /* Ajusta la altura deseada */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-image img {
+    width: 100%;
+    height: 100%;
+    border-radius: 15%;
 }
 
 .container-paragraphe {
     grid-area: container-paragraphe;
-    /*grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;*/
-    margin: 10px 10px 10px 10px;
-    padding: 10px 10px 10px 10px;
-
-
-
+    margin: 10px;
+    padding: 10px;
+    font-family: 'Kanit', sans-serif;
 }
 
 .container-short-paragraphe {
     grid-area: container-short-paragraphe;
-    /*grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 3;*/
-    margin: 10px 10px 10px 10px;
-    padding: 10px 10px 10px 10px;
-
-
+    margin: 10px;
+    padding: 10px;
+    font-family: 'Kanit', sans-serif;
 }
 
 .container-video {
     grid-area: container-video;
-    /*grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 3;*/
+    margin: 10px;
     background-color: azure;
-
 }
 
-.container-image * {
-    width: 100%;
-    height: 100%;
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+        "form-container image1 image2 image3";
 }
 
-.container-video * {
-    width: 100%;
-    height: 100%;
+.grid-container img {
+    max-width: 100%;
+    height: auto;
 }
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
 
 /*  Media Queries */
 /* Media Query para dispositivos menores a 600px */
@@ -143,7 +126,7 @@ body {
 
     #container-main {
         grid-template-columns: auto;
-        grid-template-rows: 34% 33% 33% 33%;
+        grid-template-rows: 25% 25% 25% 25%;
         grid-template-areas:"container-image"
                             "container-paragraphe"
                             "container-short-paragraphe"
@@ -160,8 +143,9 @@ body {
     
     .button-options {
         display: flex;
-        flex-direction: column; 
+        flex-direction: row; 
         margin-top: 20px; 
+        justify-content: space-around;
     }
     
     .button-options button {
@@ -179,17 +163,23 @@ body {
         grid-template-areas: "container-image  container-paragraphe"
                              "container-short-paragraphe  container-video";
         background-color: aquamarine;
-
-
                              
-
     }
 
     .container-paragraphe {
         overflow: scroll;
     }
 
-
+    .button-options {
+        display: flex;
+        flex-direction: row; 
+        margin-top: 20px; 
+        justify-content: space-around;
+    }
+    
+    .button-options button {
+        margin: 5px 0; 
+    }
 
 
 }
@@ -198,7 +188,52 @@ body {
     body {
         background-color: beige;
     }
+
+    .button-options {
+        display: flex;
+        flex-direction: row; 
+        margin-top: 20px; 
+        justify-content: space-around;
+    }
+    
+    .button-options button {
+        margin: 5px 0; 
+    }
 }
+
+.grid-container {
+    display: grid;
+    width: 100%;
+    height: 600px;
+    grid-template-columns: auto 25% 25% 25%;
+    grid-template-rows: 50%;
+    grid-template-areas: 
+        "form-container image1 image2 image3";
+}
+.grid-container img {
+    width: auto;
+    height: 100%;
+    max-width: 80%;
+    justify-content: space-around;
+}
+
+
+
+.grid-container > * {
+    padding: 10px; /* Añade un espacio interior a los elementos dentro de la cuadrícula */
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container > * {
+    margin: 10px 10px;
+
+}
+
+
 
 
 
