--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,54 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Roboto&display=swap");
-.img-fade {
-  transition: opacity 0.3s ease-in-out;
+@keyframes zoomIn {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.2);
+  }
 }
-
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes swing {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(15deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes opacityFlash {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 * {
   box-sizing: border-box;
 }
@@ -79,6 +125,13 @@
   left: 0.35rem;
 }
 
+header {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
 body {
   margin: 8px 16px 8px 16px;
 }
@@ -88,11 +141,19 @@ body {
   background-color: #A4C639 !important;
 }
 
+.navbar a {
+  transition: color 0.3s ease;
+}
+
+.navbar a:hover {
+  color: #6d8229; /* Color deseado al pasar el ratón */
+  transform: translateY(-3px); /* Ajusta la cantidad de translación según tu preferencia */
+}
+
 .button-options {
   display: flex;
   flex-direction: row;
-  margin-top: 50px;
-  margin-bottom: 20px;
+  margin: 30px;
   justify-content: space-around;
 }
 
@@ -117,6 +178,7 @@ body {
   height: 70%;
   border-radius: 5%;
   align-items: center;
+  animation: opacityFlash 1s ease-in-out infinite;
 }
 
 .container-paragraphe {
@@ -151,7 +213,6 @@ body {
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 100%;
   grid-template-areas: "form image-1 image-2 image-3";
-  margin-top: 20px;
 }
 
 .form-container {
@@ -160,29 +221,32 @@ body {
   height: auto;
   grid-area: "form";
   margin-right: 40px;
-  margin-top: 20px;
 }
 
 .grid-container img {
   width: auto;
-  height: 100%;
-  max-width: 80%;
-  justify-content: space-around;
+  height: 90%;
+  max-width: 70%;
   border-top-right-radius: 5%;
-  margin-top: 20px;
+}
+
+.image-container {
+  width: 50%;
 }
 
 #image1 {
   grid-area: image-1;
+  animation: swing 2s ease-in-out infinite;
 }
 
 #image2 {
   grid-area: image-2;
+  animation: fadeIn 1s ease-in-out;
 }
 
-#image3:hover {
+#image3 {
   grid-area: image-3;
-  transition: opacity 0.3s ease-in-out;
+  animation: pulse 5s ease-in-out infinite;
 }
 
 #section-project-flex {
